feat: progress bars

--- a/app/src/main/res/layouts/alarm/layout/activity_alarm.xml
+++ b/app/src/main/res/layouts/alarm/layout/activity_alarm.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.alarm.AlarmActivity">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -63,6 +64,15 @@
             </RelativeLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/topAppBarLayout"
