refactor: alarm activation

--- a/app/src/main/res/layouts/main/layout/alarm_item.xml
+++ b/app/src/main/res/layouts/main/layout/alarm_item.xml
@@ -16,6 +16,18 @@
         android:paddingHorizontal="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_vertical"
         tools:text="@tools:sample/lorem" />
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/alarmSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="30dp"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
