feat: settings page

--- a/app/src/main/res/layouts/main/layout/activity_main.xml
+++ b/app/src/main/res/layouts/main/layout/activity_main.xml
@@ -35,7 +35,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_margin="20dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
                         <EditText
                             android:id="@+id/playlist_name_input"
